# dual-contour-research-os

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
contracts/: catalog.json
docs/: ARCHITECTURE.md  ATTESTATION_KEY_THREAT_MODEL.md  DEVELOPMENT_AGENT_CONTRACT.md  OPERATOR_OBSERVATION_RUNBOOK.md  PHYSICAL_RELEASE_RUNBOOK.md  PRODUCT_COMPLETION.md  R08B_RELEASE_OPERATOR_RUNBOOK.md  S38_FINAL_DEPLOYMENT_RUNBOOK.md  STAGE4_A1_ISOLATION_RELEASE_RUNBOOK.md  TRUST_BOUNDARIES.md
inventory/: p01-physical-release-control-artifact.json  p01-r2-action-transition-control-artifact.json  p01-r3-engine-image-mapping-control-artifact.json  p01-r4-systemd-host-compat-control-artifact.json  p01-r5-docker-socket-compat-control-artifact.json  p04-chief-null-content-vacuous-reconciliation-v1-control-artifact.json  p04-expired-mission-vacuous-prepass-v1-control-artifact.json  p04-gpt-deep-null-content-vacuous-reconciliation-v1-control-artifact.json  p04-research-ingress-additive-repair-v1-control-artifact.json  p04-runtime-closure-v1-control-artifact.json  p04-runtime-closure-vacuous-v1-control-artifact.json  p04-runtime-closure-worker-bound-v1-control-artifact.json
ownership/: registry.json
provenance/: attestation-public-keys-v1.json  champion-challenger-evaluation-v1.json  evidence-replication-matrix-v1.json  evolution-genome-gap-miner-v1.json  generated-code-isolation-ladder-v1.json  governed-method-transfer-v1.json  memory-uplift-replay-capacity-v1.json  method-card-declassification-v1.json  restic-0.19.0.json  (+21 more)
(+1384 files in other folders)
